# Quantitative-Discursive-Analysis

./: QDA.py  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
tests/: test_qda.py
